fix swarm color

--- a/main/http_server/axe-os/src/app/pages/swarm/swarm.component.scss
+++ b/main/http_server/axe-os/src/app/pages/swarm/swarm.component.scss
@@ -167,7 +167,7 @@ nb-slider {
     color: var(--bs-green);
 }
 
-.swarm-table {
+.swarm-table th {
     font-weight: bold;
     color: var(--button-filled-primary-text-color);
 }
