--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.scss
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.scss
@@ -100,6 +100,7 @@
     .progress-wrap {
         position: relative;
         height: 1rem;
+        margin-left: 10px;
     }
 
     .progress-foreground {
