--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.scss
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.scss
@@ -28,6 +28,14 @@
         width: 100%;
     }
 
+    .form-row-separator {
+        @extend .form-row;
+
+        border-top: 1px solid;
+        border-color:var(--card-border-color);
+        padding-top:5px;
+      }
+
     .form-label {
         flex: 0 0 100px;
         text-align: right;
