only show restart warning when settings where changed that require a restart

--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.html
@@ -264,7 +264,7 @@
             </div>
 
         </div>
-        <div>
+        <div *ngIf="requiresReboot" class="mt-2 text-danger">
             <b>You must restart this device after saving for changes to take effect.</b>
         </div>
     </form>
