--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.html
@@ -163,14 +163,6 @@
                         </div>
                     </div>
                 </ng-container>
-
-                <div class="form-row">
-                    <nb-checkbox formControlName="flipscreen">Flip Screen</nb-checkbox>
-                </div>
-                <div class="form-row">
-                    <nb-checkbox formControlName="autoscreenoff">Automatic Screen Shutdown</nb-checkbox>
-                </div>
-
             </nb-card-body>
         </nb-card>
         <nb-card>
@@ -248,6 +240,17 @@
                     <nb-checkbox formControlName="invertfanpolarity">Invert Fan Polarity</nb-checkbox>
                 </div>
 
+            </nb-card-body>
+        </nb-card>
+        <nb-card>
+            <nb-card-header>Misc Settings</nb-card-header>
+            <nb-card-body>
+                <div class="form-row">
+                    <nb-checkbox formControlName="flipscreen">Flip Screen</nb-checkbox>
+                </div>
+                <div class="form-row">
+                    <nb-checkbox formControlName="autoscreenoff">Automatic Screen Shutdown</nb-checkbox>
+                </div>
             </nb-card-body>
         </nb-card>
         <div class="d-flex align-items-center justify-content-between mt-2">
