polished connection state on web ui a bit

--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.html
@@ -37,7 +37,7 @@
             <nb-tab tabTitle="Primary Stratum Pool">
                 <nb-card-body>
                     <div class="form-row">
-                        <label for="stratumURL" class="form-label">Stratum URL:</label>
+                        <label for="stratumURL" class="form-label">Stratum Host:</label>
                         <div class="form-control-wrapper">
                             <input nbInput id="stratumURL" type="text" formControlName="stratumURL" /><br />
                             <small>Do not include 'stratum+tcp://' or port.</small>
@@ -74,7 +74,7 @@
             <nb-tab tabTitle="Fallback Stratum Pool">
                 <nb-card-body>
                     <div class="form-row">
-                        <label for="fallbackStratumURL" class="form-label">Stratum URL:</label>
+                        <label for="fallbackStratumURL" class="form-label">Stratum Host:</label>
                         <div class="form-control-wrapper">
                             <input nbInput id="fallbackStratumURL" type="text"
                                 formControlName="fallbackStratumURL" /><br />
