some badge polishing

--- a/main/http_server/axe-os/src/app/pages/home/home.component.html
+++ b/main/http_server/axe-os/src/app/pages/home/home.component.html
@@ -47,7 +47,7 @@
             !info.isStratumConnected
               ? 'danger'
               : (info.isUsingFallbackStratum ? 'warning' : 'success')
-          " size="small" position="top end">
+          " size="small" position="top end" style="margin-top:5px;">
               </nb-badge>
             </div>
           </nb-card-header>
