adds mac address to info endpoint and system page

--- a/main/http_server/axe-os/src/app/pages/system/system.component.html
+++ b/main/http_server/axe-os/src/app/pages/system/system.component.html
@@ -21,6 +21,10 @@
                     <td>{{ info.wifiStatus }}</td>
                 </tr>
                 <tr>
+                    <td><b>MAC Address:</b></td>
+                    <td>{{ info.macAddr }}</td>
+                </tr>
+                <tr>
                     <td><b>Free Heap Memory:</b></td>
                     <td>{{ info.freeHeap }}</td>
                 </tr>
