--- a/main/http_server/axe-os/src/app/@theme/styles/themes.scss
+++ b/main/http_server/axe-os/src/app/@theme/styles/themes.scss
@@ -6,6 +6,7 @@
 $nb-themes: nb-register-theme((
   //layout-padding-top: 2.25rem,
   layout-padding: 1rem,
+  header-height: 5rem,
 
   menu-item-icon-margin: 0 0.5rem 0 0,
 
@@ -32,6 +33,7 @@ $nb-themes: nb-register-theme((
 $nb-themes: nb-register-theme((
   //layout-padding-top: 2.25rem,
   layout-padding: 1rem,
+  header-height: 5rem,
 
   menu-item-icon-margin: 0 0.5rem 0 0,
 
@@ -57,6 +59,7 @@ $nb-themes: nb-register-theme((
 $nb-themes: nb-register-theme((
   //layout-padding-top: 2.25rem,
   layout-padding: 1rem,
+  header-height: 5rem,
 
   menu-item-icon-margin: 0 0.5rem 0 0,
 
@@ -80,6 +83,7 @@ $nb-themes: nb-register-theme((
 $nb-themes: nb-register-theme((
   //layout-padding-top: 2.25rem,
   layout-padding: 1rem,
+  header-height: 5rem,
 
   menu-item-icon-margin: 0 0.5rem 0 0,
 
