--- a/main/http_server/axe-os/src/app/pages/home/home.component.scss
+++ b/main/http_server/axe-os/src/app/pages/home/home.component.scss
@@ -50,3 +50,33 @@ nb-card-header {
     overflow-x: hidden;
     overflow-y: hidden;
 }
+
+.col-fixed-width {
+  width: 50px;
+}
+.break-all {
+  word-break: break-all;
+}
+
+.ellipsis-magic {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  white-space: nowrap;
+  user-select: none;
+  padding-right: 50px;
+
+  .start {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    flex-shrink: 1;
+  }
+  .end {
+    white-space: nowrap;
+    flex-basis: content;
+    flex-grow: 0;
+    flex-shrink: 0;
+  }
+}
