WebUI optimisations for Home and Swarm views

--- a/main/http_server/axe-os/src/app/@theme/styles/themes.scss
+++ b/main/http_server/axe-os/src/app/@theme/styles/themes.scss
@@ -6,6 +6,8 @@
 $nb-themes: nb-register-theme((
   //layout-padding-top: 2.25rem,
   layout-padding: 1rem,
+  layout-medium-padding: 1rem,
+  layout-small-padding: 1rem,
   header-height: 5rem,
 
   menu-item-icon-margin: 0 0.5rem 0 0,
@@ -33,6 +35,8 @@ $nb-themes: nb-register-theme((
 $nb-themes: nb-register-theme((
   //layout-padding-top: 2.25rem,
   layout-padding: 1rem,
+  layout-medium-padding: 1rem,
+  layout-small-padding: 1rem,
   header-height: 5rem,
 
   menu-item-icon-margin: 0 0.5rem 0 0,
@@ -59,6 +63,8 @@ $nb-themes: nb-register-theme((
 $nb-themes: nb-register-theme((
   //layout-padding-top: 2.25rem,
   layout-padding: 1rem,
+  layout-medium-padding: 1rem,
+  layout-small-padding: 1rem,
   header-height: 5rem,
 
   menu-item-icon-margin: 0 0.5rem 0 0,
@@ -83,6 +89,8 @@ $nb-themes: nb-register-theme((
 $nb-themes: nb-register-theme((
   //layout-padding-top: 2.25rem,
   layout-padding: 1rem,
+  layout-medium-padding: 1rem,
+  layout-small-padding: 1rem,
   header-height: 5rem,
 
   menu-item-icon-margin: 0 0.5rem 0 0,
