--- a/main/http_server/axe-os/src/app/pages/home/home.component.html
+++ b/main/http_server/axe-os/src/app/pages/home/home.component.html
@@ -34,7 +34,7 @@
 
       <!-- Shares Card -->
       <!-- Shares Card -->
-      <div class="col-12 col-lg-6 col-xl-3">
+      <div class="col-12 col-lg-6 col-xl-3 ps-lg-1">
         <nb-card class="h-100">
           <nb-card-header style="position: relative;">
             <div class="d-flex justify-content-between align-items-center">
@@ -73,7 +73,7 @@
 
 
       <!-- Efficiency Card -->
-      <div class="col-12 col-lg-6 col-xl-3">
+      <div class="col-12 col-lg-6 col-xl-3 ps-lg-1">
         <nb-card class="h-100">
           <nb-card-header>
             <span class="text-hint">Efficiency</span>
@@ -96,7 +96,7 @@
       </div>
 
       <!-- Best Difficulty Card -->
-      <div class="col-12 col-lg-6 col-xl-3">
+      <div class="col-12 col-lg-6 col-xl-3 ps-lg-1">
         <nb-card class="h-100">
           <nb-card-header>
             <span class="text-hint">Best Difficulty</span>
@@ -122,7 +122,7 @@
     </div>
 
     <!-- Chart Section -->
-    <div class="row mt-4">
+    <div class="row mt-3">
       <div class="col-12">
         <nb-card>
           <nb-card-header>
@@ -162,7 +162,7 @@
       </div>
 
       <!-- Heat Section -->
-      <div class="col-12 col-lg-4">
+      <div class="col-12 col-lg-4 px-lg-1">
         <nb-card class="h-100">
           <nb-card-header>
             <span class="text-hint">Heat</span>
@@ -215,7 +215,7 @@
 
     <!-- Pool Information & Uptime Row -->
     <!-- Pool Information Row -->
-    <div class="row mt-4 d-flex align-items-stretch">
+    <div class="row mt-3 d-flex align-items-stretch">
       <!-- Pool Information Card -->
       <div class="col-12 col-lg-6">
         <!-- Connected? -->
