feat(settings): add stratumDifficulty setting to mining configuration

--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.html
@@ -162,6 +162,13 @@
                             <small>Mining job switching time in milliseconds.</small>
                         </div>
                     </div>
+                    <div class="form-row">
+                        <label for="stratumDifficulty" class="form-label">Stratum Difficulty:</label>
+                        <div class="form-control-wrapper">
+                            <input nbInput id="stratumDifficulty" formControlName="stratumDifficulty" type="number" /><br />
+                            <small>Target mining difficulty (integer)</small>
+                        </div>
+                    </div>
                 </ng-container>
             </nb-card-body>
         </nb-card>
