ui: rename stratumDifficulty label

--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.html
@@ -163,10 +163,10 @@
                         </div>
                     </div>
                     <div class="form-row">
-                        <label for="stratumDifficulty" class="form-label">Stratum Difficulty:</label>
+                        <label for="stratumDifficulty" class="form-label">Difficulty:</label>
                         <div class="form-control-wrapper">
                             <input nbInput id="stratumDifficulty" formControlName="stratumDifficulty" type="number" /><br />
-                            <small>Target mining difficulty (integer)</small>
+                            <small>Initial suggested Stratum difficulty</small>
                         </div>
                     </div>
                 </ng-container>
