Add poolDifficulty field to system info export + UI

--- a/main/http_server/axe-os/src/app/pages/home/home.component.html
+++ b/main/http_server/axe-os/src/app/pages/home/home.component.html
@@ -249,6 +249,15 @@
                   {{ info.isUsingFallbackStratum ? info.fallbackStratumPort : info.stratumPort }}
                 </div>
               </div>
+              <div class="row flex-nowrap">
+                <div class="col-fixed-width">
+                  <span class="text-hint">Diff:</span>
+                </div>
+                <div class="col">
+                  {{ info.poolDifficulty }}
+                </div>
+              </div>
+
 
               <div class="row flex-nowrap">
                 <div class="col-fixed-width">
