some weird serial uart switch fix for idf 5.4 and higher

--- a/main/http_server/axe-os/src/app/pages/system/system.component.html
+++ b/main/http_server/axe-os/src/app/pages/system/system.component.html
@@ -26,7 +26,7 @@
                 </tr>
                 <tr>
                     <td><b>Free Heap Memory:</b></td>
-                    <td>{{ info.freeHeap }}</td>
+                    <td>SRAM: {{ info.freeHeapInt }}, PSRAM: {{ info.freeHeap }}</td>
                 </tr>
                 <tr>
                     <td><b>Version:</b></td>
